apps/base/echo-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
    - port: 80
      targetPort: 80
