apps/base/echo-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts: [echo.int.harville.dev]
  rules:
    - host: echo.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
